--- a/BluetoothFinder/Resources/Info.plist
+++ b/BluetoothFinder/Resources/Info.plist
@@ -25,7 +25,7 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>&quot;Usado para exibir e connectar com aparelhos proximos&quot;</string>
+	<string>usado para exibir e connectar com aparelhos proximos</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
